# lp3d-analysis

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
configs/: config_cheese-3d.yaml  config_chickadee-crop.yaml  config_chickadee-crop_3_6.yaml  config_chickadee_inference_time.yaml  config_fly-anipose.yaml  config_fly-anipose_inference_time.yaml  config_human36m-crop.yaml  config_ibl-mouse.yaml  config_ibl-mouse_backbone_sweep.yaml  config_ibl-mouse_logweight_sweep.yaml  config_ibl-mouse_logweight_sweep.yaml.backup_20260301_181817_067104393  config_ibl-mouse_mvt_backbone_sweep.yaml  config_ibl-mouse_patchmask_sweep.yaml  config_ibl-mouse_patchmask_sweep.yaml.backup_20260301_194058_553944946  config_mirror-mouse-separate.yaml  config_mirror-mouse.yaml  config_rat7m-crop.yaml  config_rat7m_inference_time.yaml  config_two-mouse.yaml  config_two-mouse_backbone_sweep.yaml  config_two-mouse_logweight_sweep.yaml.backup_20260309_182714_092487351  config_two-mouse_mvt_backbone_sweep.yaml  pipeline.yaml  pipeline_distillation_cheese-3d.yaml  pipeline_distillation_example.yaml  pipeline_inference.yaml  pipeline_inference_backbone_sweep_ibl-mouse.yaml  pipeline_inference_backbone_sweep_ibl-mouse.yaml.backup_ip-10-192-11-167_20260301_181757_556388588  pipeline_inference_backbone_sweep_two-mouse.yaml  pipeline_inference_logweight_sweep_ibl-mouse.yaml  pipeline_inference_logweight_sweep_ibl-mouse.yaml.backup_20260301_181817_067104393  pipeline_inference_logweight_sweep_two-mouse.yaml.backup_20260309_182714_092487351  pipeline_inference_mvt_backbone_sweep_ibl-mouse.yaml  pipeline_inference_mvt_backbone_sweep_two-mouse.yaml  pipeline_inference_patchmask_sweep_ibl-mouse.yaml  pipeline_inference_patchmask_sweep_ibl-mouse.yaml.backup_20260301_194058_553944946  pipeline_inference_views.yaml
lp3d_analysis/: __init__.py  dataset_info.py  distillation.py  distillation_cheese3d.py  io.py  maha_organize.py  paw_ood_pixel_error_simple.py  pca_global.py  plot.py  post_process.py  post_process_1.py  post_process_concat.py  post_process_concat_bbox.py  post_process_concat_bbox_aug26.py  post_process_concat_bbox_short_version.py  post_process_concat_bbox_short_version_shorter.py  post_process_full_videos.py  post_process_long.py  post_process_notgood.py  train.py  utils.py  video.py
notebooks/: Anipose_predictions_Full_video_aug26_trying_fast.ipynb  Head_direction_analysis.ipynb  barplots_pixel_error.ipynb  benchmark_training_inference_speed_Nature.ipynb  inference_view_masking_Nature_r2.ipynb  low_rank_pose_analysis_before_nature.ipynb  traces_reconstruct_nature.ipynb
(+1857 files in other folders)
